# plotto

./: Cargo.toml  README.md
lib/: Cargo.toml
lib/src/: lib.rs
src/: main.rs
src/apis/: call_request.rs
src/helper/: command_line.rs  general.rs
src/models/agent/: manager.rs  mod.rs
src/models/agent/basic/: basic_agent.rs  basic_trait.rs
src/models/agent/pro/: agent_analyst.rs  agent_backend.rs  mod.rs  pro_trait.rs
src/tasks/: analyst.rs  backend.rs  mod.rs  tester.rs
src/utils/: command_color.rs  mod.rs
