workspace = { members = ["lib"] }
[package]
name = "plotto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.27.0"
openai_dive = "0.4.5"
tokio = { version = "1.36.0", features = ["full"] }
lib = { path = "/Users/phat/Desktop/Codespaces/temp/plotto/lib" }
serde_json = "1.0.114"
serde = "1.0.197"
features = "0.10.0"
derive = "1.0.0"
async-trait = "0.1.77"
reqwest = { version = "0.11.24", features = ["json"] }
